# kaleidoscope-regensburg

./: .gitignore  LICENSE  README.md  kaleidoscope-regensburg.cabal
src/: Compiler.hs  Parser.hs  Syntax.hs
src-main/: LLVMTest.hs
