name:               kaleidoscope-regensburg
version:            0.1
synopsis:           Toy implementation of Kaleidoscope language
                    developed during Haskell Regensburg meetups
author:             Andres Löh <andres@well-typed.com>,
                    Regensburg Haskell Meetup
license:            MIT
license-file:       LICENSE
cabal-version:      >= 1.10
build-type:         Simple

library
  build-depends:    base              >= 4   && < 5,
                    mtl               >= 2.1 && < 3,
                    parsec            >= 3.1 && < 4
                    
  hs-source-dirs:   src
  exposed-modules:  Syntax
                    Parser
  default-language: Haskell2010

executable LLVMTest
  build-depends:    base              >= 4   && < 5,
                    llvm-general      >= 3.3 && < 4,
                    llvm-general-pure >= 3.3 && < 4,
                    transformers      >= 0.3 && < 1,
                    kaleidoscope-regensburg
  hs-source-dirs:   src-main
  main-is:          LLVMTest.hs
  default-language: Haskell2010
